# dhall-rust-typegen

./: Cargo.toml  example_config.dhall
import_macro/: Cargo.toml
import_macro/src/: emitter.rs  lib.rs
src/: main.rs
