[package]
name = "dhall-type-import"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhall = { git = "https://github.com/Nadrieril/dhall-rust", rev = "711ad900153aedb7b35896c0705c932972edded2" }
