[package]
name = "dhall-type-import"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhall_schema_import = { path = "./import_macro" }
serde = "1.0"
serde_dhall = "0.9"
