[package]
name = "import_macro"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
dhall = { git = "https://github.com/Nadrieril/dhall-rust", rev = "711ad900153aedb7b35896c0705c932972edded2" }
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
